--- a/public/templates/calc.html
+++ b/public/templates/calc.html
@@ -2,6 +2,6 @@
   <h1>calculator</h1>
   <input ng-model="mileage" type="number" name="name" value=""placeholder="mileage">
   <input ng-model="money" type="number" name="name" value="" placeholder="money made">
-  <button ng-click="moneyPerMile()" type="button" name="button"></button>
+  <button ng-click="moneyPerMile()" type="button" name="button">Submit</button>
   <h1>amount per mile: {{answer}}</h1>
 </div>
